# schema-bridge

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  bindings.ts
crates/schema-bridge/: Cargo.toml  README.md
crates/schema-bridge-core/: Cargo.toml
crates/schema-bridge-core/src/: lib.rs
crates/schema-bridge-macro/: Cargo.toml
crates/schema-bridge-macro/src/: lib.rs
crates/schema-bridge/src/: lib.rs
crates/schema-bridge/tests/: integration_test.rs  newtype_test.rs  schema_test.rs  serde_rename_test.rs  string_conversion_test.rs  struct_rename_test.rs
examples/: string_test.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
