[package]
name = "schema-bridge-core"
version = "0.4.0"
edition = "2021"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
description = "Core types and traits for schema-bridge - TypeScript type generation from Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/tauri-schema"
keywords = ["typescript", "codegen", "types", "tauri", "bridge"]
categories = ["development-tools", "web-programming"]

[features]
default = []
mlua = ["dep:mlua"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.11", features = ["lua54", "vendored"], optional = true }
